# Facilita-Projeto-Interpolacao

./: .env  Dockerfile  README.md  Start_FacilitaAgro_API.bat  docker-compose.yml  postman.json  pyproject.toml  requirements.txt
agente_agro_v1/: Dockerfile  README.md  dockerignore  pyproject.toml  resumo.txt
agente_agro_v1/api/: main.py
agente_agro_v1/data/contornos/: pivo_contorno.kml
agente_agro_v1/data/grid_completo/: pivo_grid_completo.csv
agente_agro_v1/pipelines/: collinearity.py  insight_engine.py  io_checks.py  observability.py  recommendation_engine.py  reporting.py  runner.py  safety_quality.py  temporal_engine.py
api/: main.py
api/.ipynb_checkpoints/: main-checkpoint.py
data/amostragem/: pivo_solo.csv
data/contornos/: pivo_grade.gpkg
facilita_agro/: analise_espacial.py  blob_storage.py  interpolador.py  pipeline_completa.py  pipeline_yield.py  processador_amostragem_v2.py  processador_lavoura.py
facilita_agro/.ipynb_checkpoints/: filtro_yield-checkpoint.py  filtro_yield_preprocess-checkpoint.py  grid_completo-checkpoint.py  logger-checkpoint.py  pipeline_completa-checkpoint.py  pipeline_yield-checkpoint.py  processador_amostragem-checkpoint.py
facilitaagro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mapas_aplicacao_v1/: .dockerignore  Dockerfile  README.md  config_example.yml  config_example_api.json  pyproject.toml  requirements.txt
mapas_aplicacao_v1/api/: main.py
migrations/: 001_create_interpolacao_grid_completo.sql  002_create_interpolacao_grid_valores.sql  003_create_rasters_interpolados.sql
(+45 files in other folders)
